<resources>
    <string name="app_name">CRiminalIntent</string>
    <string name="action_settings">Settings</string>

    <string name="crime_title_hint">Edit this text bar to add your title</string>
    <string name="crime_title_label">Enter a crime!</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="date_picker_title">Date of Crime:</string>
    <string name="time_picker_title">Time of Crime:</string>
    <string name="suspect_button_text">Choose Suspect</string>
    <string name="report_crime_text">Send Crime Report</string>
    <string name="crime_report"> %1$s!
    The crime was discovered on %2$s. %3$s, %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">There is no suspect</string>
    <string name="crime_report_suspect">The suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report </string>
    <string name="send_report">Send crime report via</string>
    <string name="call_criminal">Call Criminal</string>

    <string name="new_crime"> New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="empty_view_message">Please click on the + icon on the toolbar to create a crime</string>

    <string name="show_delete">Delete</string>

    <string name="subtitle_format">%1$scrimes</string>
    <plurals name="subtitle_plural">
        <item quantity="one"> %1$s crime</item>
        <item quantity="other">%1$s crimes</item>
    </plurals>

    <string name="text_view_contacts">Contacts Information</string>
</resources>
